The Xen PCI_BUS_FIXUP/PCI_ADDR_FIXUP has rotted, catch up with x86 changes in this area. Patch provided by FUKAUMI Naoki in PR#40356.